0.6.1
 - setup: bump dclab from 0.34.6 to 0.35.0
0.6.0
 - feat: search and browse public data on a DCOR instance
 - feat: drag resources in data browser to Shape-Out 2.7.0
   (partially #1)
 - setup: bump dclab from 0.34.4 to 0.34.6
0.5.11
 - fix: KeyError when checking for existence of resource (#24)
 - enh: drag&drop files to manual upload dialog (#23)
 - enh: set upload rate refresh interval to >3s (#22)
 - enh: permit to only update resource schema supplements when
   executing `dataset.add_resource` with `exist_ok=True`
0.5.10
 - fix: removed confusing wait-cursor during circle selection
 - fix: manual upload dialog was shown even though user pressed
   cancel on circle creation (#20)
 - fix: silenced very long error message about connection errors
   in the background thread that refreshes the login status
 - tests: add complementary tests for upload queue and persistent job
   list
0.5.9
 - fix: TypeError when attempting a manual upload when the user did not
   have a circle set-up (#17)
 - fix: manual uploads were not added to persistent job list
0.5.8
 - fix: introduce LocalTaskResourcesNotFoundError in upload.task
   which results in a custom DCORAidQueueWarning in upload.queue
   in case a dataset resource is not available at the moment;
   previously, this scenario resulted in a FileNotFoundError
 - fix: when loading tasks recursively from a directory, only ask
   once for the circle (if there are multiple available to the user)
 - fix: immortalized jobs that fail to be summoned (e.g. because the
   user moved the resources to a different directory), can now be
   imported again from the orgiginal (albeit moved) .dcoraid-task file
0.5.7
 - tests: fix test logic for new anonymous test (#15)
0.5.6
 - fix: UnboundLocalError "progress" referenced before assignment,
   because "wait-disk" status was not handled
 - fix: UploadQueue could not handle jobs in PersistentUploadJobList that
   had been deleted on the server